Improvements to the API. More methods in OrderApiController.
